fixed ui and added contact page

--- a/collab.html
+++ b/collab.html
@@ -38,20 +38,20 @@
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="logo">
-								 <a href="index.html">bg</a>
+						 <li>
+								 <a class="logo"></a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#about">About Me</a>
+								 <a class="page-scroll" href="index.html">Home</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#skills">Skills</a>
+								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#contact">Contact</a>
+								 <a class="page-scroll" href="contact.html">Contact</a>
 						 </li>
 				 </ul>
 		 </div>
@@ -106,7 +106,8 @@
 </div>
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
  <span class="text1"> <h class= "h"> <strong> Collab-a-Comic </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner. The website was created through ruby on rails for the front-end and PostgreSQL for the backend.  </p>
+  <span class="text2"> <p class="ppgraph"> <strong> Collab-a-comic is a website application that helps comic book writers and artists find a collaboration partner. When creating a comic, you'll need two key skills: being a good writer and artist. However, it is difficult to be proficient in these two skills: you can be a good artist but lack writing skills or vice-versa you can be a great writer but not a great artist. This is where I got the idea for the site: to help artists find writers and to help writers find artists to create their comic. </p>
+	<p class="ppgraph"> The website was created through ruby on rails for the front-end and PostgreSQL for the backend. Although I used this stack on LFG, the group project that I worked on, I chose Rails/PostgreSQL to show that I can create a ruby on rails project on my own. </p>
   <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer, Adobe Photoshop</strong> </p> </span>
 </div>
 </div>
