--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,6 @@
 
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.4/waypoints.min.js"></script>
 <link rel="stylesheet" type="text/css" href="http://cdn.bootcss.com/animate.css/3.1.0/animate.css">
-<link href="http://cdn.bootcss.com/animate.css/3.1.0/animate.css">
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	 rel="stylesheet">
@@ -21,15 +20,7 @@
 <script src="js/app.js"></script>
 <script src="js/scroll.js"></script>
 
-<!-- <script>
-$(function() {
-	$( "#draggable" ).draggable();
-});
-</script>
-</head> -->
-
-<body id="project-body">
-
+<body>
   <!-- Navigation -->
   <nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
    <div class="container">
@@ -70,39 +61,21 @@ $(function() {
    <!-- /.container-fluid -->
   </nav>
 
-<div class="row" "text-center">
-<h2 class="proj-title">Projects</h2>
-<hr>
-
-<!--Image 1-->
-<figure class="snip1205 green">
-  <img src="css/images/Persona.jpg">
-  <i class="ion-search"></i>
-	<a href="persona.html"></a>
-  <p class="proj-description">Persona Gamer</p>
-</figure>
-
-<figure class="snip1205 gray">
-  <img height="230" src="css/images/lfg-2.png">
-  <i class="ion-search"></i>
-	<a href="lfg.html"></a>
-  <p class="proj-description">Looking For Group</p>
-</figure>
-
-<figure class="snip1205 gold">
-  <img src="css/images/collab.jpg">
-  <i class="ion-search"></i>
-	<a href="collab.html"></a>
-  <p class="proj-description">Collab-A-Comic</p>
-</figure>
-
-<figure class="snip1205 pink">
-  <img src="css/images/saku.png">
-  <i class="ion-search"></i>
-	<a href="saku.html"></a>
-  <p class="proj-description">Project Sakura</p>
-</figure>
-
+<div>
+  <h2 class="proj-title"> Contact </h2>
+  <hr>
+</div>
+<h2> Want to reach out to me? Please feel free to contact me through the following:	</h2>
+<div class="col-md-12 text-center">
+<a href="mailto:bgabot89@gmail.com">
+<img id="mail" src="css/images/email.png"></i>
+</a>
+<a href="http://www.linkedin.com/in/briangabot">
+<img id="linkedin" src="css/images/linkedin.png">
+</a>
+<a href="https://github.com/bgabot89">
+<img id="github" src="css/images/github.png">
+</a>
 </div>
 
 </body>
