--- a/lfg.html
+++ b/lfg.html
@@ -38,20 +38,20 @@
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="logo">
-								 <a href="index.html">bg</a>
+						 <li>
+								 <a class="logo"></a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#about">About Me</a>
+								 <a class="page-scroll" href="index.html">Home</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#skills">Skills</a>
+								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#contact">Contact</a>
+								 <a class="page-scroll" href="contact.html">Contact</a>
 						 </li>
 				 </ul>
 		 </div>
@@ -105,7 +105,7 @@
 </div>
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
  <span class="text1"> <h class= "h"> <strong> LFG </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> LFG is a social networking portal targeted towards gamers. Members will be able to form meet up groups for a specific game. I collaborated with three other group members to create a website built mainly from Ruby on Rails. On the back-end, I worked on routings, authorizations, validations and seeded data while on the front-end, I worked on CSS stylings and some design work. </p>
+  <span class="text2"> <p class="ppgraph"> <strong> LFG is a social networking portal targeted towards gamers. Members will be able to form meet up groups for a specific game. I collaborated with three other group members to create a website built from Ruby on Rails. On the back-end, I worked on routings, authorizations, validations and seeded data while on the front-end, I worked on CSS stylings and some design work. </p>
   <p class="ppgraph"> Technologies used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Material Design</strong> </p> </span>
 </div>
 </div>
