--- a/persona.html
+++ b/persona.html
@@ -38,20 +38,20 @@
 		 <!-- Collect the nav links, forms, and other content for toggling -->
 		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 				 <ul class="nav navbar-nav navbar-right">
-						 <li class="hidden active">
-								 <a href="#page-top"></a>
+						 <li>
+								 <a class="logo"></a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#about">About Me</a>
+								 <a class="page-scroll" href="index.html">Home</a>
 						 </li>
 						 <li class="">
 								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#skills">Skills</a>
+								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#contact">Contact</a>
+								 <a class="page-scroll" href="contact.html">Contact</a>
 						 </li>
 				 </ul>
 		 </div>
