--- a/resume.html
+++ b/resume.html
@@ -21,45 +21,45 @@
 <script src="js/scroll.js"></script>
 
 <body>
-<!-- Navigation -->
-<nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
- <div class="container">
-		 <!-- Brand and toggle get grouped for better mobile display -->
-		 <div class="navbar-header page-scroll">
-				 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						 <span class="sr-only">Toggle navigation</span>
-						 <span class="icon-bar"></span>
-						 <span class="icon-bar"></span>
-						 <span class="icon-bar"></span>
-				 </button>
-				 <!--header deactivated for now until i get an official logo -->
-				 <!-- <a class="navbar-brand page-scroll" href="#page-top">briangabot.com</a> -->
-		 </div>
+	<!-- Navigation -->
+	<nav class="navbar navbar-default navbar-fixed-top navbar-shrink">
+	 <div class="container">
+			 <!-- Brand and toggle get grouped for better mobile display -->
+			 <div class="navbar-header page-scroll">
+					 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+							 <span class="sr-only">Toggle navigation</span>
+							 <span class="icon-bar"></span>
+							 <span class="icon-bar"></span>
+							 <span class="icon-bar"></span>
+					 </button>
+					 <!--header deactivated for now until i get an official logo -->
+					 <!-- <a class="navbar-brand page-scroll" href="#page-top">briangabot.com</a> -->
+			 </div>
 
-		 <!-- Collect the nav links, forms, and other content for toggling -->
-		 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				 <ul class="nav navbar-nav navbar-right">
-						 <li class="logo">
-								 <a href="index.html">bg</a>
-						 </li>
-						 <li class="">
-								 <a class="page-scroll" href="#about">About Me</a>
-						 </li>
-						 <li class="">
-								 <a class="page-scroll" href="projects.html">Projects</a>
-						 </li>
-						 <li class="">
-								 <a class="page-scroll" href=resume.html>Resume</a>
-						 </li>
-						 <li class="">
-								 <a class="page-scroll" href="#contact">Contact</a>
-						 </li>
-				 </ul>
-		 </div>
-		 <!-- /.navbar-collapse -->
- </div>
- <!-- /.container-fluid -->
-</nav>
+			 <!-- Collect the nav links, forms, and other content for toggling -->
+			 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					 <ul class="nav navbar-nav navbar-right">
+							 <li>
+									 <a class="logo"></a>
+							 </li>
+							 <li class="">
+									 <a class="page-scroll" href="index.html">Home</a>
+							 </li>
+							 <li class="">
+									 <a class="page-scroll" href="projects.html">Projects</a>
+							 </li>
+							 <li class="">
+									 <a class="page-scroll" href=resume.html>Resume</a>
+							 </li>
+							 <li class="">
+									 <a class="page-scroll" href="contact.html">Contact</a>
+							 </li>
+					 </ul>
+			 </div>
+			 <!-- /.navbar-collapse -->
+	 </div>
+	 <!-- /.container-fluid -->
+	</nav>
 
 <div>
   <h2 class="proj-title"> Resume </h2>
@@ -97,21 +97,21 @@
   <p class="resume-info"><strong> Order Management Lead </strong></p>
   <p class="resume-info"> Kiwi Crate, Nov 2014 - Sept 2015, Mountain View, CA </p>
   <ul>
-  <li> Improved operating efficiency by 150% by helping integrate new templates used for order processing with the use of basic HTML and XML files
+  <li class="list-resume"> Improved operating efficiency by 150% by helping integrate new templates used for order processing with the use of basic HTML and XML files
   </li>
   </ul>
   <p class="resume-info"><strong> Catalog Coordinator </strong></p>
   <p class="resume-info"> Glyde, Oct 2012 - Nov 2014, Menlo Park, CA </p>
   <ul>
-    <li> Assisted the engineering team with web testing and reported various issues through JIRA such as bugs and defects
+    <li class="list-resume"> Assisted the engineering team with web testing and reported various issues through JIRA such as bugs and defects
     </li>
-    <li> Improved user experience and enhanced company growth by helping out with the design work for several company products with the use of Adobe Creative Suite
+    <li class="list-resume"> Improved user experience and enhanced company growth by helping out with the design work for several company products with the use of Adobe Creative Suite
     </li>
   </ul>
   <p class="resume-info"><strong> Web Content Intern </strong></p>
   <p class="resume-info"> Downtown Association of Santa Cruz, Apr 2011-Jun 2011, Santa Cruz, CA </p>
     <ul>
-      <li> Responsible for periodically updating different events and storefronts through Wordpress CMS and Filemaker Pro for a corporation’s website
+      <li class="list-resume"> Responsible for periodically updating different events and storefronts through Wordpress CMS and Filemaker Pro for a corporation’s website
       </li>
     </ul>
 </div>
