--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ $(function() {
 								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
-								 <a class="page-scroll" href="#contact">Contact</a>
+								 <a class="page-scroll" href="contact.html">Contact</a>
 						 </li>
 				 </ul>
 		 </div>
@@ -105,26 +105,6 @@ $(function() {
 	</div>
 </div>
 
-<div class = "os-animation" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id="contact">
-<h2> Contact </h2>
-<div class="col-lg-6 col-md-6 col-sm-4 text-center">
-<div>
-</div>
-</div>
-<h2> Want to reach out to me? Please feel free to contact me through the following:	</h2>
-
-<div class="col-md-12 text-center">
-<a href="mailto:bgabot89@gmail.com">
-<img id="mail" src="css/images/email.png"></i>
-</a>
-<a href="http://www.linkedin.com/in/briangabot">
-<img id="linkedin" src="css/images/linkedin.png">
-</a>
-<a href="https://github.com/bgabot89">
-<img id="github" src="css/images/github.png">
-</a>
-</div>
-</div>
 
 </body>
 </html>
