adding jam project

--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,9 @@
   						 <li class="">
   								 <a class="page-scroll" href="projects.html">Projects</a>
   						 </li>
+							 <li class="">
+									<a class="page-scroll" href="https://bgabot89.wordpress.com/">Blog</a>
+							</li>
   						 <li class="">
   								 <a class="page-scroll" href=resume.html>Resume</a>
   						 </li>
