--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@ $(function() {
 								 <a class="page-scroll" href="projects.html">Projects</a>
 						 </li>
 						 <li class="">
+								 <a class="page-scroll" href="https://bgabot89.wordpress.com/">Blog</a>
+						 </li>
+						 <li class="">
 								 <a class="page-scroll" href=resume.html>Resume</a>
 						 </li>
 						 <li class="">
@@ -103,6 +106,10 @@ $(function() {
 			<p class="summary"> My name is Brian Gabot. I am a developer currently seeking a full-stack/or Front-end developer position. I graduated from the University of California, Santa Cruz in 2011 and had plans to become an accountant or financial analyst. However, I felt that these job occupations would not make me happy. I continued to work a few jobs dealing with business operations and analytics. One particular task that I was assigned as a catalog coordinator at Glyde was to manage website content. It was then I realized that my true passion was to create things that people would find useful, it was here on out that I decided to make a change into a web development career. In order to achieve my goal, I attended General Assembly's Web Development Immersive Program in September 2015 and graduated in December 2015. </p>
 			<p class="summary"> While I'm not in front of my computer developing or illustrating, I like to play table-top or video games.</p>
 	</div>
+</div>
+
+<div id="copyright" class="text-center">
+  <p id="copy-pp"> ©2016 Developed by Brian Gabot, All rights Reserved </p>
 </div>
 
 
