--- a/projects.html
+++ b/projects.html
@@ -21,13 +21,6 @@
 <script src="js/app.js"></script>
 <script src="js/scroll.js"></script>
 
-<!-- <script>
-$(function() {
-	$( "#draggable" ).draggable();
-});
-</script>
-</head> -->
-
 <body id="project-body">
 
   <!-- Navigation -->
@@ -57,6 +50,9 @@ $(function() {
   						 <li class="">
   								 <a class="page-scroll" href="projects.html">Projects</a>
   						 </li>
+							 <li class="">
+									<a class="page-scroll" href="https://bgabot89.wordpress.com/">Blog</a>
+							</li>
   						 <li class="">
   								 <a class="page-scroll" href=resume.html>Resume</a>
   						 </li>
@@ -86,7 +82,7 @@ $(function() {
   <img height="230" src="css/images/lfg-2.png">
   <i class="ion-search"></i>
 	<a href="lfg.html"></a>
-  <p class="proj-description">Looking For Group</p>
+  <p id="lfg-text">Looking For Group</p>
 </figure>
 
 <figure class="snip1205 gold">
@@ -101,6 +97,20 @@ $(function() {
   <i class="ion-search"></i>
 	<a href="saku.html"></a>
   <p class="proj-description">Project Sakura</p>
+</figure>
+
+<figure class="snip1205 white">
+  <img src="css/images/deemo.png">
+  <i class="ion-search"></i>
+	<a href="deemo.html"></a>
+  <p id="deemo-text">Deemo</p>
+</figure>
+
+<figure class="snip1205 red">
+  <img src="css/images/jam.png">
+  <i class="ion-search"></i>
+	<a href="jam.html"></a>
+  <p id="jam-text">Japanese American Museum Project</p>
 </figure>
 
 </div>
