--- a/resume.html
+++ b/resume.html
@@ -49,6 +49,9 @@
 									 <a class="page-scroll" href="projects.html">Projects</a>
 							 </li>
 							 <li class="">
+									<a class="page-scroll" href="https://bgabot89.wordpress.com/">Blog</a>
+							</li>
+							 <li class="">
 									 <a class="page-scroll" href=resume.html>Resume</a>
 							 </li>
 							 <li class="">
@@ -78,18 +81,20 @@
   <h2> Projects </h2>
   <hr>
   <p class="resume-info"><strong> Persona Gamer </strong> - <a href="https://shrouded-caverns-8468.herokuapp.com"> https://shrouded-caverns-8468.herokuapp.com </a></p>
-  <p class="resume-info">Persona Gamer is a personality test application catered towards rpg gamers. The tests were created through Javascript and developed to be a replica of the Traitify personality tests. Front-end development was built through HTML, CSS, Javascript and jQuery. MongoDB was used to store user data information. </p>
-  <p class="resume-info">Technologies Used: HTML, CSS, Javascript, express, node, MongoDB</p>
+	  <p class="resume-info">Persona Gamer is a personality test application catered towards rpg gamers. The tests were created through Javascript and developed to be a replica of the Traitify personality tests. Front-end development was built through HTML, CSS, Javascript and jQuery. MongoDB was used to store user data information. </p>
+	  <p class="resume-info">Technologies Used: HTML, CSS, Javascript, express, node, MongoDB</p>
   <p class="resume-info"><strong> Looking For Group </strong> - <a href="http://lfg-meetup.herokuapp.com/">http://lfg-meetup.herokuapp.com/ </a></p>
-  <p class="resume-info">Looking For Group (or lfg for short) is a social networking portal targeted towards gamers. Members will be able to form meet up groups for a specific game. Pair programmed with three other programmers to create a full-stack web application built on Ruby on Rails and PostgreSQL database. Assisted with the creation of user interface through HTML and CSS.  Created routings, authorizations and validations for back-end development. </p>
-  <p class="resume-info">Technologies Used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Material Design</p>
+	  <p class="resume-info">Looking For Group (or lfg for short) is a social networking portal targeted towards gamers. Members will be able to form meet up groups for a specific game. Pair programmed with three other programmers to create a full-stack web application built on Ruby on Rails and PostgreSQL database. Assisted with the creation of user interface through HTML and CSS.  Created routings, authorizations and validations for back-end development. </p>
+	  <p class="resume-info">Technologies Used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Material Design</p>
   <p class="resume-info"><strong> Collab-A-Comic </strong> - <a href="http://collabacomic.herokuapp.com/">http://collabacomic.herokuapp.com/ </a></p>
- <p class="resume-info">Technologies Used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer, Adobe Photoshop</p>
-  <p class="resume-info"> Collab-a-Comic is a website application that helps comic book writers and artists find a collaboration partner. Users can post drawings using the paperclip gem or writings onto their profile page. The action mailer and Figaro gems were incorporated to allow users to contact other people on the site through an automated email. The application used Ruby on Rails for a front-end framework and PostgreSQL for the database
-  </p>
+	  <p class="resume-info"> Collab-a-Comic is a website application that helps comic book writers and artists find a collaboration partner. Users can post drawings using the paperclip gem or writings onto their profile page. The action mailer and Figaro gems were incorporated to allow users to contact other people on the site through an automated email. The application used Ruby on Rails for a front-end framework and PostgreSQL for the database</p>
+		<p class="resume-info">Technologies Used: PostgresSQL, Ruby on Rails, CSS, Bootstrap, HTML, Javascript, Action Mailer, Adobe Photoshop</p>
   <p class="resume-info"><strong> Project Sakura </strong> - <a href="http://projectsakura.herokuapp.com/">http://projectsakura.herokuapp.com/</a></p>
-  <p class="resume-info"> Project Sakura is a front-end application created in react.js and express to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area.  </p>
-  <p class="resume-info">Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js </p>
+	  <p class="resume-info"> Project Sakura is a front-end application created in react.js and express to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area.  </p>
+	  <p class="resume-info">Technologies Used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js </p>
+	<p class="resume-info"><strong> Deemo </strong> - <a href="http://projectsakura.herokuapp.com/">http://projectsakura.herokuapp.com/</a></p>
+  <p class="resume-info"> Deemo is a fanpage dedicated to the rhythm iOS and android game 'Deemo'. </p>
+  <p class="resume-info">Technologies Used: AngularJS, Express, HTML, CSS, Photoshop </p>
 </div>
 <div>
   <h2> Experience </h2>
@@ -115,7 +120,7 @@
       </li>
     </ul>
 </div>
-<div>
+<div id="education">
   <h2> Education </h2>
   <hr>
   <p class="resume-info"> <strong> General Assembly </strong></p>
