--- a/deemo.html
+++ b/deemo.html
@@ -63,48 +63,50 @@
  <!-- /.container-fluid -->
 </nav>
 
-<h2 class="proj-title"> Project Sakura </h2>
+
+<h2 class="proj-title"> Deemo </h2>
 <hr>
-<!--Project Sakura Image-->
+<!--IW-RPG Image-->
+<!--LFG Image-->
 <div class="row PJCT">
 <div class = "os-animation col-md-6" data-os-animation="fadeIn" data-os-animation-delay="0.5s" id ="sakura">
-<!--Test for new svg hover effect -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
-<style type="text/css">
-	.st10{fill:#E5B8D3;}
-	.st1{fill:#FFFFFF;}
-	.st2{fill:#F9F9F9;}
-	.st3{font-family:'MyriadPro-Regular';}
-	.st4{font-size:54.4534px;}
-	.st5{opacity: 0; fill:#F9F9F9;}
-</style>
-<path id="screen" class="st10" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
-	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
-<path id="base" class="st10" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
-	H325.2z"/>
-<path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
-	C-38.2,608.9-170,609.1-170,609.1z"/>
-<path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
-	C271.5,620.2,265,620.3,265,620.3z"/>
-<image class = "image" style="enable-background:new;" width="2758" height="1606" id="saku" xlink:href="css/images/saku.png"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-</image>
-<a xlink:href="http://projectsakura.herokuapp.com/">
-<image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg" transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
-	</a>
-</image>
-<text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text>
-</svg>
+  <!--Test for new svg hover effect -->
+  <?xml version="1.0" encoding="utf-8"?>
+  <!-- Generator: Adobe Illustrator 19.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+  <svg version="1.1" class="Comp" id="proj_saku" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+  	 viewBox="-550 123.3 898.5 546.7" style="enable-background:new -550 123.3 898.5 546.7;" xml:space="preserve">
+  <style type="text/css">
+  	.st0{fill:black;}
+  	.st1{fill:#FFFFFF;}
+  	.st2{fill:#F9F9F9;}
+  	.st3{font-family:'MyriadPro-Regular';}
+  	.st4{font-size:54.4534px;}
+  	.st5{opacity: 0; fill:#F9F9F9;}
+  </style>
+  <path id="screen" class="st0" d="M-408.9,166.9h622c0,0,15.3,9.3,14.7,23.3c-0.7,14,2.7,408.7-0.7,413.3s-3.3,4.7-3.3,4.7
+  	s-641.4,0.5-648.1-1.5s-7.2-412.5-3.9-419.8C-424.9,179.6-422.9,166.9-408.9,166.9z"/>
+  	<image style="overflow:visible;enable-background:new;" width="495" height="287" id="iw-rpg" xlink:href="css/images/deemo.png"  transform="matrix(1.1525 0 0 1.1525 -381.0778 222.6138)">
+  	</image>
+    <a xlink:href="https://deemo.herokuapp.com/">
+    <image class = "image" style="overflow:visible;enable-background:new;" width="2758" height="1606" id="black" xlink:href="css/images/black.jpg"  transform="matrix(0.2075 0 0 0.2075 -381.9604 221.3845)">
+    </a>
+    </image>
+  <path id="base" class="st0" d="M325.2,606.7v24.4c0,0-28,17.7-37.3,18c-17.1,0.6-782.1-1.9-780-2c0,0-32-8.7-34-14s0-26.4,0-26.4
+  	H325.2z"/>
+  <path id="hole_1" class="st1" d="M-170,609.1c0,0,0,10.8,4.9,10.8s121.9,0,121.9,0s4.9-10.5,4.9-10.8
+  	C-38.2,608.9-170,609.1-170,609.1z"/>
+  <path id="hole_2" class="st1" d="M265,620.3h-18c0,0-2.5,3.1,0,3.4c2.5,0.3,28.3,0,28.3,0s0.9,0,1-0.9s1.3-2.3-1.8-2.5
+  	C271.5,620.2,265,620.3,265,620.3z"/>
+  <!-- <text transform="matrix(1 0 0 1 -250.4967 364.7416)" class="st2 st3 st4">Project Sakura</text> -->
+  <text transform="matrix(1 0 0 1 -180.4999 390.2425)" class="st2 st3 st4">Deemo</text>
+  <!-- <text transform="matrix(1 0 0 1 -261.4944 370.7414)" class="st2 st3 st4">Collab-A-Comic</text> -->
+  <!-- <text transform="matrix(1 0 0 1 -219.4962 347.7423)"><tspan x="0" y="0" class="st5 st3 st4">Looking For </tspan><tspan x="0" y="65.3" class="st5 st3 st4">Group</tspan></text> -->
+  </svg>
 </div>
-
 <div class= "os-animation proj-para col-md-8 col-lg-6" data-os-animation="bounceInRight" data-os-animation-delay="0s" id="testpp">
- <span class="text1"> <h class= "h"> <strong> Project Sakura </strong> </h> </span> <br>
-  <span class="text2"> <p class="ppgraph"> <strong> Project Sakura is an application to help Music Enthusiasts find Japanese Music Concerts/Festivals in their area. At the time, I was teaching myself React.js and wanted to create an application based on it. Currently, the application is solely front-end, however, I may integrate a backend to it in the future. I was the illustrator and developer for this site. The front-end is anchored by express and react.js. Illustrations were designed using Adobe Illustrator. </p>
-  <p class="ppgraph"> Technologies used: Express.js, Node, CSS, Bootstrap, SVG animations, Adobe Illustrator, React.js, Soundcloud API, Gulp.js</strong> </p> </span>
+ <span class="text1"> <h class= "h"> <strong> Deemo </strong> </h> </span> <br>
+  <span class="text2"> <p class="ppgraph"> <strong> <span id="wip">*Work in Progress*</span> <br> Deemo is a fansite dedicated to the rhythm iOS and Android game, Deemo. The application was created in AngularJS and Express. I created this application to gain some more awareness of how AngularJS works </p>
+  <p class="ppgraph"> Technologies used: AngularJS, Express, HTML, CSS, Express</strong> </p> </span>
 </div>
-
 </div>
-
 </html>
